# stwin-simple-stream

./: .gitignore  CMakeLists.txt  README.md  dcl_import.ssf
.github/workflows/: cmake.yml  main.yml
STSW-STWINKT01_V2.1.0/Drivers/BSP/Components/iis2dh/: Release_Notes.html
STSW-STWINKT01_V2.1.0/Drivers/BSP/Components/iis2mdc/: Release_Notes.html
STSW-STWINKT01_V2.1.0/Drivers/BSP/Components/iis3dwb/: Release_Notes.html
STSW-STWINKT01_V2.1.0/Drivers/BSP/STWIN/: Release_Notes.html  Release_Notes.md  STWIN.c  STWIN.h  STWIN_audio.c  STWIN_audio.h  STWIN_bc.c  STWIN_bc.h  STWIN_conf_template.h  STWIN_motion_sensors.c  STWIN_motion_sensors_ex.c  STWIN_motion_sensors_ex.h  STWIN_wifi.c
STSW-STWINKT01_V2.1.0/Middlewares/ST/BlueNRG-2/: Release_Notes.html  Release_Notes.md
STSW-STWINKT01_V2.1.0/Middlewares/ST/BlueNRG-2/doc/: BlueNRG-2_UserManual.chm
STSW-STWINKT01_V2.1.0/Middlewares/ST/BlueNRG-2/doc/Applications/Beacon/: readme.txt
STSW-STWINKT01_V2.1.0/Middlewares/ST/BlueNRG-2/doc/Applications/Central/: readme.txt
STSW-STWINKT01_V2.1.0/Middlewares/ST/BlueNRG-2/doc/Applications/SampleApp/: readme.txt
STSW-STWINKT01_V2.1.0/Middlewares/ST/BlueNRG-2/doc/Applications/SensorDemoBLESensor/: readme.txt
STSW-STWINKT01_V2.1.0/Middlewares/ST/BlueNRG-2/doc/Applications/VirtualCOMPort/: readme.txt
STSW-STWINKT01_V2.1.0/Middlewares/ST/BlueNRG-2/hci/: bluenrg1_hci_le.c
STSW-STWINKT01_V2.1.0/Middlewares/ST/BlueNRG-2/hci/hci_tl_patterns/Basic/: hci_tl.c  hci_tl.h
STSW-STWINKT01_V2.1.0/Middlewares/ST/BlueNRG-2/hci/hci_tl_patterns/Template/: hci_tl.h
STSW-STWINKT01_V2.1.0/Middlewares/ST/STM32_Connect_Library/netif/wifi_if/es_wifi/: net_es_wifi.c
STSW-STWINKT01_V2.1.0/Middlewares/ST/STM32_USB_Device_Library/Class/SensorStreaming_WCID/Inc/: usbd_wcid_streaming.h
STSW-STWINKT01_V2.1.0/Middlewares/ST/STM32_USB_Device_Library/Class/SensorStreaming_WCID/Src/: usbd_wcid_streaming.c
STWin-SimpleStream/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  STM32L4R9ZITx_FLASH.ld  STWin_SimpleStream.cfg  arm-none-eabi-gcc.cmake  build.ninja  cmake_install.cmake
STWin-SimpleStream/inc/: FreeRTOSConfig.h  STWIN_conf.h  STWIN_errno.h  cube_hal.h  datalog_application.h  ffconf.h  hts221_settings.h  iis2dh_settings.h  iis2mdc_settings.h  iis3dwb_settings.h  ism330dhcx_settings.h  lps22hh_settings.h  main.h  sd_diskio.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  stts751_settings.h  usbd_cdc_interface.h  usbd_conf.h  usbd_desc.h
STWin-SimpleStream/knowledgepack/inc/: sml_recognition_config.h  sml_recognition_run.h
STWin-SimpleStream/knowledgepack/lib/: model.json
STWin-SimpleStream/knowledgepack/lib/inc/: kb.h  model_json.h
STWin-SimpleStream/knowledgepack/src/: sml_output.c  sml_recognition_run.c
STWin-SimpleStream/src/: audio_process.c  cube_hal_l4.c  datalog_application.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  system_stm32l4xx.c  usbd_cdc_interface.c  usbd_conf.c  usbd_desc.c
docker-build-binary-action/: Dockerfile  action.yml  entrypoint.sh
eclipse-project/: .cproject  .project
